--- a/src/Authentication/LoginPage/Login.css
+++ b/src/Authentication/LoginPage/Login.css
@@ -87,7 +87,7 @@
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    background-color: red;
+    /* background-color: red; */
 }
 
 .EText input{
