--- a/src/Component2/AdminDashboard/AdminDashLeft/AdminSidebar.css
+++ b/src/Component2/AdminDashboard/AdminDashLeft/AdminSidebar.css
@@ -72,9 +72,11 @@ color: white;
   color: #0455B4;
 }
 
-/* @media screen and (max-width: 426px) {
+@media screen and (max-width: 426px) {
   .Adminsidebar{
+    width: 100%;
+    height: 100vh;
     background-color: white;
     color: #0455B4;
   }
-} */
+}
