--- a/src/Component2/AdminDashboard/AdminDashRight/AdminDashRight.css
+++ b/src/Component2/AdminDashboard/AdminDashRight/AdminDashRight.css
@@ -7,10 +7,11 @@
 .AdminDashRightHeader{
     width:100% ;
     height: 10%;
-    background-color: green;
+    background-color: rgb(0, 77, 128);
     display: flex;
     align-items: center;
     justify-content: center;
+    color: white;
 }
 .AdminDashRightHeader_Wrap{
 width: 95%;
@@ -36,11 +37,18 @@ justify-content: space-between;
     height: 100%;
     top: 0;
     left: 0;
-    background-color: #0455B4;
+    /* background-color: #0455B4; */
+    background-color: rebeccapurple;
+    color: #0455B4;
 }
 .AdminSideBarCloseIcon{
     position: absolute;
     right: 10%;
     top: 12%;
+}
+.AdminSide_Wrap{
+    width: 100%;
+    height: 100vh;
+    background-color: black;
 }
 }
