--- a/src/Authentication/SignOut/SignOut.css
+++ b/src/Authentication/SignOut/SignOut.css
@@ -56,3 +56,12 @@
     color: white;
     /* border: 2px solid #0455B4; */
 }
+
+@media screen and (max-width: 426px) {
+    .signoutWrap{
+        width: 80%;
+    }
+    .signupdecision{
+        width: 100%;
+    }
+}
