--- a/src/Component2/AdminDashboard/AdminDashRight/AdminTaskAssign/AdminTaskAssign.css
+++ b/src/Component2/AdminDashboard/AdminDashRight/AdminTaskAssign/AdminTaskAssign.css
@@ -8,7 +8,7 @@
 }
 .AdminTaskAssignWrap{
     width: 80%;
-    height: 98%;
+    height: 100%;
     /* justify-content: space-evenly; */
     /* background-color: blue; */
 }
@@ -25,33 +25,48 @@
 }
 .AdminTaskAssignInput{
     width: 100%;
-    height: 50%;
+    height: 90%;
     display: flex;
     flex-direction: column;
-    gap: 20px;
-    /* background-color: darkgray; */
+    gap: 30px;
+    /* background-color: rgb(35, 248, 149); */
 }
 .AdminTaskAssignInputsTag{
     width: 100%;
-    height: 25%;
+    height: 15%;
     /* background-color: black; */
     display: flex;
+    align-items: center;
 }
 .AdminInput{
     width: 70%;
-    height: 100%;
+    height: 90%;
     /* background-color: pink; */
     display: flex;
     align-items: center;
-    /* padding-left: 20px; */
+    justify-content: center;
+    padding-top: 10px;
+}
+.AdminInput input{
+    width: 100%;
+    height: 80%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+}
+.AdminInput input:focus{
+    outline: none;
+    border-color: #007bff;
+    box-shadow: 0 0 0 2px rgba(0, 123, 255, 0.25);
 }
 .AdminTaskAssignButton{
     width: 30%;
-    height: 100%;
+    height: 90%;
     /* background-color: red; */
     display: flex;
     align-items: center;
-    padding: 20px;
+    padding-left: 20px;
 }
 .AdminTaskAssignButton button{
     padding: 10px 20px;
@@ -65,22 +80,15 @@
 .AdminTaskAssignButton button:hover{
     background-color: #0455B4;
 }
-.AdminTaskAssignInputsTag input{
+.AdminTaskAssignoverallview{
     width: 100%;
-    height: 70%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 16px;
-}
-.AdminTaskAssignInputsTag input:focus{
-    outline: none;
-    border-color: #007bff;
-    box-shadow: 0 0 0 2px rgba(0, 123, 255, 0.25);
+    height: 30%;
+    /* background-color: #007bff; */
 }
 .AdminTaskAssignedView{
     width: 100%;
-    height: 90%;
+    /* height: max-content; */
+    height: 100%;
     /* background-color: rgb(228, 228, 228); */
     display: flex;
     flex-direction: column;
@@ -130,7 +138,7 @@
 }
 .AdminTaskAssignSelect{
     width: 100%;
-    height: 90%;
+    height: 10%;
     /* background-color: gray; */
     display: flex;
     align-items: center;
@@ -156,8 +164,8 @@
 }
 .AdminTaskAssignCreateTaskButton{
     width: 100%;
-    height: 0%;
-    background-color: #007bff;
+    height: 10%;
+    /* background-color: #007bff; */
     display: flex;
     align-items: center;
     padding-left: 10px;
@@ -168,7 +176,7 @@
     background-color: #0455B4;
     outline: none;
     border: none;
-    border-radius: 7px;
+    border-radius: 5px;
     color: white;
     cursor: pointer;
     font-size: 16px;
@@ -178,5 +186,68 @@
 
 
 @media screen and (max-width: 426px) {
-
+    .AdminTaskAssign{
+        width: 100%;
+        height: 90vh;
+        /* background-color: gray; */
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .AdminTaskAssignWrap{
+        width: 100%;
+        height: 100%;
+        padding: 10px;
+        /* justify-content: space-evenly; */
+        /* background-color: blue; */
+    }
+    /* .AdminTaskAssignoverallview{
+        /* width: 100%;
+        height: 30%; */
+        /* background-color: green; */
+    /*} */
+    .AdminTaskAssignedViewWrap{
+        /* width: 100%;
+    height: 80%; */
+    /* background-color: black; */
+    display: flex;
+    align-items: center;
+        /* background-color: black; */
+    }
+    .AdminTaskOption{
+        width: 30%;
+        height: 100%;
+        /* background-color: ivory; */
+        /* display: fl; */
+    }
+    .AdminTaskOption button{
+    padding: 10px 5px;
+    border: none;
+    border-radius: 4px;
+    background-color: red;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    /* margin-right: 80px; */
+    }
+    .AdminTaskAssignCreateTaskButton{
+        width: 100%;
+        height: 10%;
+        /* background-color: #007bff; */
+        display: flex;
+        align-items: center;
+        padding-left: 10px;
+    }
+    .AdminTaskAssignCreateTaskButton button{
+        width: 40%;
+        height: 80%;
+        background-color: #0455B4;
+        outline: none;
+        border: none;
+        border-radius: 5px;
+        color: white;
+        cursor: pointer;
+        font-size: 16px;
+    
+    }
 }
