--- a/src/Component2/AdminDashboard/AdminDashRight/AdminDashRight.css
+++ b/src/Component2/AdminDashboard/AdminDashRight/AdminDashRight.css
@@ -7,21 +7,24 @@
 .AdminDashRightHeader{
     width:100% ;
     height: 10%;
-    background-color: rgb(0, 77, 128);
+    background-color: #0455B4;
     display: flex;
     align-items: center;
     justify-content: center;
     color: white;
 }
 .AdminDashRightHeader_Wrap{
-width: 95%;
-height: 100%;
-display: flex;
-align-items: center;
-justify-content: space-between;
+    width: 95%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 .AdminUserIcon{
     display: none;
+}
+.AdminDashRightContent{
+    /* z-index: -10; */
 }
 @media screen and (max-width: 426px){
     .AdminUserIcon{
@@ -31,24 +34,56 @@ justify-content: space-between;
         display: none;
     }
 .Adminsidebar_MobileView{
-    width: 100%;
+    width: 80%;
     display: flex;
     position: absolute;
     height: 100%;
     top: 0;
-    left: 0;
+    left: 20%;
     /* background-color: #0455B4; */
-    background-color: rebeccapurple;
-    color: #0455B4;
+    background-color: white;
+    /* color: #0455B4; */
+    
 }
 .AdminSideBarCloseIcon{
     position: absolute;
-    right: 10%;
-    top: 12%;
+    right: 5%;
+    top: 5%;
+    font-size: 30px;
+    color: #0455B4;
+    /* background-color: #0455B4; */
 }
 .AdminSide_Wrap{
     width: 100%;
     height: 100vh;
     background-color: black;
+}
+.Adminsidebarlogo{
+    /* position: absolute;
+    bottom: 0; */
+    width: 80%;
+    height: 20%;
+    /* background-color: green; */
+    margin-left: 40%;
+}
+.Adminsidebarlogo img{
+    width: 100%;
+    height: 100%;
+}
+.AdminsidebarNav{
+    /* background-color: blue; */
+    margin-left: 30%;
+    
+}
+.Admintask{
+    /* background-color: black; */
+    color: #0455B4;
+}
+.Admintask:hover{
+    background-color: #0455B4;
+    color: white;
+}
+.AdminSignOutDiv{
+    color: #0455B4;
 }
 }
