--- a/src/Component2/AdminDashboard/AdminDashRight/AdminTaskAssign/AdminTaskAssign.css
+++ b/src/Component2/AdminDashboard/AdminDashRight/AdminTaskAssign/AdminTaskAssign.css
@@ -207,9 +207,9 @@
         /* background-color: green; */
     /*} */
     .AdminTaskAssignedViewWrap{
-        /* width: 100%;
-    height: 80%; */
-    /* background-color: black; */
+         width: 100%;
+    height: 80%;
+    background-color: black;
     display: flex;
     align-items: center;
         /* background-color: black; */
@@ -233,10 +233,10 @@
     .AdminTaskAssignCreateTaskButton{
         width: 100%;
         height: 10%;
-        /* background-color: #007bff; */
+        /* background-color: #77b5f8; */
         display: flex;
         align-items: center;
-        padding-left: 10px;
+        /* padding-left: 0; */
     }
     .AdminTaskAssignCreateTaskButton button{
         width: 40%;
@@ -247,7 +247,7 @@
         border-radius: 5px;
         color: white;
         cursor: pointer;
-        font-size: 16px;
-    
+        font-size: 13px;
+
     }
 }
