--- a/src/Component2/AdminDashboard/AdminDashRight/AdminDashCreateWriter/AdminDashCreateWriter.css
+++ b/src/Component2/AdminDashboard/AdminDashRight/AdminDashCreateWriter/AdminDashCreateWriter.css
@@ -37,3 +37,21 @@
     color: #0455B4;
     cursor: pointer;
 }
+
+@media screen and (max-width: 426px) {
+    .AdminDashCreateWriter{
+        width: 100%;
+        height: 90vh;
+        /* background-color: red; */
+    }
+    .AdminDashCreateWriterwrap{
+        width: 90%;
+        height: 90%;
+        /* background-color: gray; */
+    }
+    .AdminDashCreateWriterActionCenter{
+        width: inherit;
+        height: 40%;
+        background-color: white;
+    }
+}
