--- a/src/Component2/AdminDashboard/AdminDashRight/AdminDashCreateWriter/AdminDashCreateWriterNextContent/AdminDashCreateWriterNextContent.css
+++ b/src/Component2/AdminDashboard/AdminDashRight/AdminDashCreateWriter/AdminDashCreateWriterNextContent/AdminDashCreateWriterNextContent.css
@@ -4,7 +4,7 @@
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
   }
   
   h2 {
@@ -27,6 +27,9 @@
     margin-bottom: 10px;
     border: 1px solid #ccc;
     border-radius: 3px;
+    border-top: none;
+      border-left: none;
+      border-right: none;
   }
   
   button {
@@ -42,3 +45,29 @@
     background-color: #0056b3;
   }
   
+  @media screen and (max-width: 426px) {
+    .signup-form-container{
+      max-width: 150vw;
+      height: 90vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      box-shadow: none;
+      /* gap: 30px; */
+      /* background-color: blue; */
+    }
+    form{
+      width: 100%;
+      height: 60%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      /* background-color: green; */
+    }
+    form input{
+      border-top: none;
+      border-left: none;
+      border-right: none;
+    }
+  }
