--- a/src/Authentication/LoginPage/Log.css
+++ b/src/Authentication/LoginPage/Log.css
@@ -1,5 +1,63 @@
 @media screen and (max-width: 768px) {
+    .AdminLoginPage{
+        width: 100%;
+        height: 100vh;
+    }
+    .SignWrap{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        /* flex-direction: column; */
+        /* justify-content: center; */
+        /* align-items: center; */
+    }
+    .SignWrap .imag{
+        display: none;
+    }
+    .SignIn{
+        width: 100%;
+        height: 100%;
+    /* box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+        background-color: blue; */
+        padding: 30px;
+    }
+    .signText{
+        width: 100%;
+        height: 10%;
+        /* background-color: pink; */
+        color: #0455B4;
+    }
+}
 
+@media (min-width: 769px) and (max-width: 1284px){
+    .AdminLoginPage{
+        width: 100%;
+        height: 100vh;
+    }
+    .SignWrap{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        /* flex-direction: column; */
+        /* justify-content: center; */
+        /* align-items: center; */
+    }
+    .SignWrap .imag{
+        display: none;
+    }
+    .SignIn{
+        width: 100%;
+        height: 100%;
+    /* box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+        background-color: blue; */
+        padding: 30px;
+    }
+    .signText{
+        width: 100%;
+        height: 10%;
+        /* background-color: pink; */
+        color: #0455B4;
+    }
 }
 
 @media screen and (max-width: 426px) {
@@ -13,9 +71,64 @@
         height: 100%;
         display: flex;
         flex-direction: column;
+        /* background-color: gray; */
+    }
+    .SignWrap img{
+        display: none;
+    }
+    .input{
+        width: 100%;
+        height: 80%;
+        /* background-color: gray; */
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+        gap: 10px;
+    }
+    .SignInInputPassword{
+        width: 100%;
+        height: 15%;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+        /* background-color: #c9d953; */
+        position: relative;
+    }
+    .SignInInputPassword input{
+        width: 100%;
+        height: 100%;
+        outline: none;
+        padding-left: 5px;
+        border-radius: 0;
+    }
+    .SignInInputPassword .Show{
+        font-size: 30px;
+        position: absolute;
+        right: 20px;
+        top: 10px;
+    }
+    .EText{
+        width: 100%;
+        height: 15%;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+        /* background-color: #53d95e; */
+    }
+    .EText input{
+    width: 100%;
+    height: 100%;
+    outline: none;
+    padding-left: 5px;
+    border-radius: 0;
+    /* border-bottom: 1px solid #e91616; */
+    /* background-color: red; */
     }
     .AdminwelcomeMssg{
-        width: 100%;
+    width: 100%;
     height: 100px;
     display: flex;
     align-items: center;
