--- a/src/Authentication/LoginPage/Login.css
+++ b/src/Authentication/LoginPage/Login.css
@@ -9,33 +9,33 @@
 }
 
 .SignWrap{
-    width: 50%;
-    height: 90%;
+    width: 100%;
+    height: 100%;
     /* background-color: gray; */
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     /* border: 1px solid green; */
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-    position: relative;
+    /* position: relative; */
 }
 
 .imag{
-    width: 100%;
-    height: 50%;
+    width: 50%;
+    height: 100%;
     /* background-color: cadetblue; */
+    object-fit: contain;
 }
 
 .imag img{
     width: 100%;
     height: 100%;
-    object-fit: cover;
     /* position: absolute; */
 }
 
 .SignIn{
-    width: 100%;
-    height: 50%;
-    background-color: white;
+    width: 50%;
+    height: 100%;
+    /* background-color: rgb(143, 38, 38); */
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -46,16 +46,16 @@
 }
 
 .SignInWrap{
-    width: 50%;
+    width: 100%;
     height: 70%;
     /* border: 1px solid blue; */
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    position: absolute;
+    /* position: absolute;
     top: 30%;
-    right: 2%;
+    right: 2%; */
 }
 
 .signText{
@@ -80,6 +80,30 @@
     gap: 10px;
 }
 
+.SignInInputPassword{
+    width: 100%;
+    /* height: 5%; */
+    display: flex;
+    align-items: center;
+    /* flex-direction: column; */
+    justify-content: center;
+    position: relative;
+    /* background-color: red; */
+}
+
+.SignInInputPassword input{
+    width: 100%;
+    height: 100%;
+    outline: none;
+    padding-left: 5px;
+    border-radius: 0;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: 1px solid #ccc;
+    background-color: transparent;
+}
+
 .EText{
     width: 100%;
     /* height: 5%; */
@@ -94,7 +118,7 @@
     width: 100%;
     height: 100%;
     outline: none;
-    padding-left: 20px;
+    padding-left: 5px;
     border-radius: 0;
     border-top: none;
     border-left: none;
@@ -109,21 +133,23 @@
     /* background-color: gray; */
     display: flex;
     align-items: center;
-    padding-top: 7px;
+    /* padding-top: 7px; */
     gap: 10px;
 }
 
-.ETextCheckbox input{
-    border: 1px solid #0455B4;
-
+.ETextCheckbox span{
+    /* border: 1px solid #0455B4; */
+    /* font-size: 20px; */
+    margin-bottom: 10px;
 }
 
 .Show{
-    font-size: 30px;
+    font-size: 27px;
     color: #0455B4;
-    position: absolute;
-    right: 0;
     cursor: pointer;
+    position: absolute;
+    right: 10px;
+    top: 3px;
 }
 
 .EText1{
