--- a/src/Authentication/SignUpPage/SignUp.css
+++ b/src/Authentication/SignUpPage/SignUp.css
@@ -1,38 +1,153 @@
-.LoginPage{
+.SignUpPage{
     width: 100%;
     height: 100vh;
     background-color: white ;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-}
+    justify-content: center;
+    /* position: relative; */
 
-.SignWrap{
+}
+.SignUpWrap{
+    width: 100%;
+    height: 100%;
+    /* background-color: green; */
+    display: flex;
+}
+.SignUpimage{
     width: 50%;
-    height: 95%;
-    /* background-color: gray; */
+    height: 100%;
+    /* background-color: pink; */
+}
+.SignUpimage img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.SignUp{
+    width: 50%;
+    height: 100%;
+    /* background-color: black; */
+    /* position: absolute; */
+    /* top: 30%; */
+    /* right: 13%; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.SignUpWrap2{
+    width: 98%;
+    height: 90%;
+    /* background-color: red; */
     display: flex;
     flex-direction: column;
-    /* border: 1px solid green; */
+    align-items: center;
+    gap: 20px;
+    justify-content: center;
+}
+.signUpText{
+    /* background-color: blue; */
+    width: 100%;
+    height: 7%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #0455B4;
+}
+.SignUpInput{
+    width: 100%;
+    /* background-color: yellow; */
+    height: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    /* gap: 10px; */
+}
+.SignUpInputWrap{
+    width: 100%;
+    /* background-color: gray; */
+    height: 30%;
+    position: relative;
+}
+.SignUpInputWrap input{
+    width: 100%;
+    /* height: 60%; */
+    /* background-color: aqua; */
+    outline: none;
+}
+.Show{
+    color: #0455B4;
+    position: absolute;
+    top: 0;
+}
+.SignUpInputWrap1{
+    width: 100%;
+    /* background-color: aliceblue; */
+    height: 20%;
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+}
+.SignUpInputWrap1 button{
+    width: 100%;
+    height: 90%;
+    background-color: #0455B4;
+    border-radius: 10px;
+    cursor: pointer;
+}
+.SignUpInputWrap2 span{
+    color: #0455B4;
+    cursor: pointer;
+    /* animation: backInUp;
+    animation-duration: 3s; */
+}
+
+.sign-in-link.animate__heartBeat {
+  animation: heartBeat 10s;
+}
+
+@keyframes heartBeat {
+  0% {
+    transform: scale(1);
+  }
+  14% {
+    transform: scale(1.3);
+  }
+  28% {
+    transform: scale(1);
+  }
+  42% {
+    transform: scale(1.3);
+  }
+  70% {
+    transform: scale(1);
+  }
+}
+
+/* .SignUpWrap{
+    width: 50%;
+    height: 95%;
+    background-color: gray;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid red;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     position: relative;
 }
 
-.imag{
+.SignUpimage{
     width: 100%;
     height: 50%;
-    /* background-color: cadetblue; */
-}
+} 
 
-.imag img{
+.SignUpimage img{
     width: 100%;
     height: 100%;
     object-fit: cover;
-    /* position: absolute; */
 }
 
-.SignIn{
+.SignUp{
     width: 100%;
     height: 50%;
     background-color: white;
@@ -42,13 +157,11 @@
     justify-content: center;
     margin-bottom: 20%;
     z-index: 500;
-    /* padding-top: 20%; */
 }
 
-.SignInWrap{
+.SignUpWrap2{
     width: 50%;
     height: 70%;
-    /* border: 1px solid blue; */
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -58,10 +171,9 @@
     right: 2%;
 }
 
-.signText{
+.signUpText{
     width: 100%;
     height: 20%;
-    /* background-color: blue; */
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -69,10 +181,9 @@
     gap: 10px;    
 }
 
-.input{
+.SignUpInput{
     width: 100%;
     height: 80%;
-    /* background-color: gray; */
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -80,17 +191,16 @@
     gap: 10px;
 }
 
-.EText{
+.SignUpInputWrap{
     width: 100%;
     height: 20%;
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    /* background-color: red; */
 }
 
-.EText input{
+.SignUpInputWrap input{
     width: 100%;
     height: 100%;
     outline: none;
@@ -111,17 +221,16 @@
     cursor: pointer;
 }
 
-.EText1{
+.SignUpInputWrap1{
     width: 100%;
     height: 20%;
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    /* background-color: red; */
 }
 
-.EText1 button{
+.SignUpInputWrap1 button{
     width: 100%;
     height: 50px;
     background-color: #0455B4;
@@ -129,4 +238,4 @@
     border-radius: 7px;
     color: white;
     cursor: pointer;
-}
+} */
