--- a/src/Component2/AdminDashboard/AdminDashLeft/AdminSidebar.css
+++ b/src/Component2/AdminDashboard/AdminDashLeft/AdminSidebar.css
@@ -82,3 +82,15 @@ padding-left: 10px;
     color: #0455B4;
   }
 }
+
+@media screen and (max-width: 768px){
+  .Adminsidebar{
+    width: 100%;
+    height: 100vh;
+    background-color: white;
+    color: #0455B4;
+  }
+  .Adminsidebarlogo{
+    background-color: none;
+  }
+}
