--- a/src/Component2/AdminDashboard/AdminDashRight/AdminDashCreateWriter/AdminDashCreateWriter.css
+++ b/src/Component2/AdminDashboard/AdminDashRight/AdminDashCreateWriter/AdminDashCreateWriter.css
@@ -8,7 +8,7 @@
     flex-direction: column;
 }
 .AdminDashCreateWriterwrap{
-    width: 50%;
+    width: 80%;
     height: 90%;
     background-color: aliceblue; 
     display: flex;
@@ -16,10 +16,11 @@
     justify-content: center;
 }
 .AdminDashCreateWriterActionCenter{
-    width: inherit;
+    width: 60%;
     height: 40%;
     border: 2px solid #0455B4;
     display: flex;
+    background-color: white;
     align-items: center;
     justify-content: center;
     flex-direction: column;
@@ -46,7 +47,7 @@
     }
     .AdminDashCreateWriterwrap{
         width: 90%;
-        height: 90%;
+        height: 80%;
         /* background-color: gray; */
     }
     .AdminDashCreateWriterActionCenter{
