--- a/src/Component2/AdminDashboard/AdminDashRight/AdminDashCreateWriter/AdminDashCreateWriterNextContent/AdminDashCreateWriterNextContent.css
+++ b/src/Component2/AdminDashboard/AdminDashRight/AdminDashCreateWriter/AdminDashCreateWriterNextContent/AdminDashCreateWriterNextContent.css
@@ -1,8 +1,15 @@
 .signup-form-container {
-    max-width: 400px;
+    /* max-width: 400px; */
+    width: 60vw;
+    height: 70vh;
+    border: 2px solid  #0455B4;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     margin: 0 auto;
     padding: 20px;
-    border: 1px solid #ccc;
+    /* border: 1px solid #ccc; */
     border-radius: 5px;
     /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
   }
@@ -10,29 +17,36 @@
   h2 {
     text-align: center;
     margin-bottom: 20px;
+    color: #0455B4;
   }
   
   form {
+    width: 80%;
+    height: 90%;
+    /* background-color: pink; */
     display: flex;
     flex-direction: column;
-  }
-  
-  label {
-    font-weight: bold;
-    margin-bottom: 5px;
+    justify-content: center;
+    align-items: center;
+    gap: 35px;
   }
   
   input {
+    width: 100%;
+    height: 15%;
     padding: 10px;
     margin-bottom: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #0455B4;
     border-radius: 3px;
     border-top: none;
       border-left: none;
       border-right: none;
+    outline: none;
   }
   
   button {
+    width: 100%;
+    height: 15%;
     padding: 10px;
     background-color: #007bff;
     color: #fff;
@@ -44,11 +58,36 @@
   button:hover {
     background-color: #0056b3;
   }
+
+  @media screen and (max-width: 768px) {
+    .signup-form-container{
+      width: 90vw;
+      height: 80vh;
+      /* background-color: red; */
+    }
+    form{
+      width: 80%;
+      height: 90%;
+      /* background-color: yellow; */
+      display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    }
+    input{
+      width: 100%;
+      height: 10%;
+    }
+    button{
+      width: 100%;
+      height: 10%;
+    }
+  }
   
   @media screen and (max-width: 426px) {
     .signup-form-container{
-      max-width: 150vw;
-      height: 90vh;
+      width: 90vw;
+      height: 80vh;
       display: flex;
       flex-direction: column;
       align-items: center;
