--- a/src/Authentication/SignUpPage/SignUp.css
+++ b/src/Authentication/SignUpPage/SignUp.css
@@ -1,7 +1,7 @@
 .SignUpPage{
     width: 100%;
-    height: 100vh;
-    background-color: white ;
+    height: 99.4vh;
+    /* background-color: rgb(242, 42, 42) ; */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -56,30 +56,46 @@
     color: #0455B4;
 }
 .SignUpInput{
-    width: 100%;
+    width: 80%;
     /* background-color: yellow; */
     height: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
-    /* gap: 10px; */
+    gap: 10px;
 }
 .SignUpInputWrap{
     width: 100%;
     /* background-color: gray; */
     height: 30%;
-    position: relative;
+    /* position: relative; */
 }
 .SignUpInputWrap input{
     width: 100%;
-    /* height: 60%; */
+    height: 80%;
     /* background-color: aqua; */
+    outline: none;
+}
+.SignUpInputWrap2{
+    width: 100%;
+    height: 40%;
+    /* background-color: aqua; */
+    outline: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.SignUpInputWrap2 input {
+    width: 100%;
+    height: 60%;
     outline: none;
 }
 .Show{
     color: #0455B4;
     position: absolute;
-    top: 0;
+    top: 62%;
+    /* bottom: 6%; */
+    right: 7%;
 }
 .SignUpInputWrap1{
     width: 100%;
@@ -91,12 +107,12 @@
 }
 .SignUpInputWrap1 button{
     width: 100%;
-    height: 90%;
+    height: 100%;
     background-color: #0455B4;
-    border-radius: 10px;
+    border-radius: 5px;
     cursor: pointer;
 }
-.SignUpInputWrap2 span{
+.SignUpInputWrap3 span{
     color: #0455B4;
     cursor: pointer;
     /* animation: backInUp;
