--- a/src/Component2/AdminDashboard/AdminDashRight/AdminDashRight.css
+++ b/src/Component2/AdminDashboard/AdminDashRight/AdminDashRight.css
@@ -222,6 +222,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    /* background-color: aqua; */
+    padding-bottom: 30px;
 }
 .Adminsidebarlogo .logoimage{
     width: 80%;
@@ -243,14 +245,16 @@
 .AdminsidebarNav_Wrap{
     width: 100%;
     height: 80%;
-    /* background-color: #a7caf2; */
+    background-color: #a7caf2;
     margin-top: 30%;
+    display: flex;
+    justify-content: center;
 }
 .Admintask{
-    width: 100%;
+    width: 80%;
     /* height: 80%; */
     display: flex;
-    align-items: center;
+    /* align-items: center; */
     justify-content: center;
     color: #0455B4;
     /* background-color: green; */
