--- a/src/Authentication/LoginPage/Login.css
+++ b/src/Authentication/LoginPage/Login.css
@@ -105,6 +105,15 @@
     background-color: transparent;
 }
 
+.SignInInputPassword .Show{
+    font-size: 27px;
+    color: #0455B4;
+    cursor: pointer;
+    position: absolute;
+    right: 10px;
+    top: 8px;
+}
+
 .EText{
     width: 100%;
     /* height: 5%; */
@@ -147,15 +156,6 @@
     /* border: 1px solid #0455B4; */
     /* font-size: 20px; */
     margin-bottom: 10px;
-}
-
-.Show{
-    font-size: 27px;
-    color: #0455B4;
-    cursor: pointer;
-    position: absolute;
-    right: 10px;
-    top: 3px;
 }
 
 .EText1{
