--- a/src/Authentication/SignOut/SignOut.css
+++ b/src/Authentication/SignOut/SignOut.css
@@ -57,11 +57,95 @@
     /* border: 2px solid #0455B4; */
 }
 
-@media screen and (max-width: 426px) {
+@media screen and (max-width: 768px) {
     .signoutWrap{
-        width: 80%;
+        width: 90%;
+        height: 40%;
+        gap: 30px;
+        padding: 10px;
+        /* background-color:  yellow;  */
     }
     .signupdecision{
         width: 100%;
+        height: 10%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: #0455B4;
+    }
+    .signupOption{
+        /* background-color: pink; */
+        height: 60%;
+        width: 100%;
+    }
+    .signupOption .signOptionCancel1{
+    width: 200px;
+    height: 50px;
+    }
+    .signupOption .signOptionCancel{
+    width: 200px;
+    height: 50px;
+    }
+}
+
+@media screen and (max-width: 426px) {
+    .signoutWrap{
+        width: 90%;
+        height: 40%;
+        gap: 30px;
+        padding: 10px;
+        /* background-color:  yellow;  */
+    }
+    .signupdecision{
+        width: 100%;
+        height: 10%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: #0455B4;
+    }
+    .signupOption{
+        /* background-color: pink; */
+        height: 60%;
+        width: 100%;
+    }
+    .signupOption .signOptionCancel1{
+    width: 300px;
+    height: 50px;
+    }
+    .signupOption .signOptionCancel{
+    width: 300px;
+    height: 50px;
+    }
+}
+
+@media (min-width: 769px) and (max-width: 1284px){
+    .signoutWrap{
+        width: 90%;
+        height: 40%;
+        gap: 30px;
+        padding: 10px;
+        /* background-color:  yellow;  */
+    }
+    .signupdecision{
+        width: 100%;
+        height: 10%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: #0455B4;
+    }
+    .signupOption{
+        /* background-color: pink; */
+        height: 60%;
+        width: 100%;
+    }
+    .signupOption .signOptionCancel1{
+    width: 200px;
+    height: 50px;
+    }
+    .signupOption .signOptionCancel{
+    width: 200px;
+    height: 50px;
     }
 }
