--- a/src/Authentication/SignUpPage/SignUpMedia.css
+++ b/src/Authentication/SignUpPage/SignUpMedia.css
@@ -63,7 +63,7 @@
         /* margin-top: 2px;
         margin-bottom: 10%; */
         position: absolute;
-        top: 0;
+        top: 59%;
     }
     .SignUpInputWrap1 button{
         width: 100%;
@@ -73,10 +73,16 @@
     }
     .SignUpInputWrap2{
         width: 100%;
-        /* height: 10%; */
+        height: 20%;
         /* background-color: yellow; */
         /* margin-bottom: 20%; */
-        padding-bottom: 25px;
+        /* padding-bottom: 10%; */
+    }
+    .SignUpInputWrap2 input{
+        width: 100%;
+        height: 90%;
+        outline: none;
+        /* background-color: red; */
     }
     .SignUpInputWrap2 p{
         margin-left: 0%;
