--- a/src/Component2/AdminDashboard/AdminDashRight/AdminAllWriter/AdminAllWriter.css
+++ b/src/Component2/AdminDashboard/AdminDashRight/AdminAllWriter/AdminAllWriter.css
@@ -2,16 +2,9 @@
     width: 100%;
     height: 90vh;
     display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.AdminAllWriterWrap{
-    width: 80%;
-    height: 100%;
-    display: flex;
     flex-direction: column;
+    /* align-items: center; */
     /* justify-content: center; */
-    align-items: center;
 }
 .AdminAllWriterH1{
     width: 100%;
@@ -19,10 +12,36 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    /* background-color: red; */
+    color: #0455B4;
+}
+.AdminAllWriterWrapper{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    /* background: blueviolet; */
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-evenly;
+    overflow-y: scroll;
+    gap: 10px;
+
+}
+.AdminAllWriterWrap{
+    width: 80%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* align-items: center; */
+    /* background-color: pink; */
+    gap: 20px;
 }
 .AdminAllWriterList{
     width: 100%;
-    height: max-content;
+    height: 100%;
     display: flex;
     align-items: center;
     /* justify-content: center; */
@@ -37,8 +56,16 @@
     justify-content: center;
 }
 .AdminAllWriterIcon{
-    font-size: 50px;
+    font-size: 30px;
     color: #0455B4;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    /* background-color: green; */
+    border: 1px solid #0455B4;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .AdminAllWriterInfo{
     width: 80%;
