--- a/src/Authentication/SignOut/SignOut.css
+++ b/src/Authentication/SignOut/SignOut.css
@@ -33,7 +33,8 @@
     gap: 75px;
 }
 .signupOption .signOptionCancel1{
-    padding: 10px 18px;
+    width: 200px;
+    height: 50px;
     font-size: 18px;
     border-radius: 5px;
     background-color: #0455B4;
@@ -44,7 +45,8 @@
     border: 2px solid #0455B4;
 }
 .signupOption .signOptionCancel{
-    padding: 10px 18px;
+    width: 200px;
+    height: 50px;
     font-size: 18px;
     border-radius: 5px;
     background-color: white;
