--- a/src/Component2/AdminDashboard/AdminDashLeft/AdminSidebar.css
+++ b/src/Component2/AdminDashboard/AdminDashLeft/AdminSidebar.css
@@ -16,6 +16,7 @@
 .Adminsidebarlogo{
   width: 100%;
   height: 20%;
+  cursor: pointer;
   /* padding-bottom: 50%; */
   /* background-color: blue; */
 }
@@ -99,6 +100,7 @@ padding-left: 10px;
   }
   .Adminsidebarlogo{
     background-color: none;
+    cursor: pointer;
   }
   .AdminSignOutDiv{
     background-color: blanchedalmond;
