--- a/src/Component/Header/Head.css
+++ b/src/Component/Header/Head.css
@@ -2,7 +2,6 @@
     header{
         width: 100%;
         height: 15vh;
-        /* background-color: #151617; */
         display: flex;
         align-items: center;
         justify-content: center;
@@ -11,20 +10,16 @@
     .headerwrap{
         width: 90%;
         height: 100%;
-        /* background-color: aliceblue; */
         display: flex;
         align-items: center;
         justify-content: space-between;
         box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
     }
-    /* #0455B4 */
     .Logo{
         width: 20%;
         height: 100%;
-        /* background-color: paleturquoise; */
         display: flex;
         align-items: center;
-        /* justify-content: center; */
     }
     
     .Logo button {
@@ -39,7 +34,6 @@
     .centerNav{
         width: 50%;
         height: 80%;
-        /* background-color: gray; */
     }
     
     .centerNav ul{
@@ -89,22 +83,102 @@
     .ham{
         display: none;
     }
+  
+}
+
+/* @media screen and (max-width: 768px) {
+    header{
+        width: 100%;
+        height: 8vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 3px;
+        box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+    }
     
-    /* .useR{
+    .headerwrap{
+        width: 95%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .Logo{
+        width: 20%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .Logo img {
+        width: 100%;
+        height: 72px;
+        cursor: pointer;
+    }
+    
+    .centerNav{
+        width: 70%;
+        height: 80%;
+    }
+    
+    .centerNav ul{
+        width: 80%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        font-size: 13px;
+    }
+    
+    .centerNav ul li {
+        list-style-type: none;
+        cursor: pointer;
+    }
+    
+    .usericons{
+        display: flex;
+        align-items: center;
+        gap: 3px;
+    }
+    
+    .user{
+        font-size: 20px;
+    }
+    
+    .CTA{
+        width: 15%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+    }
+    
+    .CTA button {
+        width: 100%;
+        height: 70%;
+        border: none;
+        background-color: #0455B4;
+        color: white;
+        border-radius: 3px;
+        cursor: pointer;
+    }
+    
+    .sidebarDiv{
         display: none;
     }
     
-    .close{
+    .ham{
         display: none;
-    } */
+    }
     
-}
+} */
 
 @media screen and (max-width: 426px) {
     header{
         width: 100%;
         height: 15vh;
-        /* background-color: #151617; */
         display: flex;
         align-items: center;
         justify-content: center;
@@ -113,7 +187,6 @@
     .headerwrap{
         width: 90%;
         height: 100%;
-        /* background-color: aliceblue; */
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -127,7 +200,6 @@
     .CTA{
         width: 40%;
         height: 100%;
-        /* background-color: black;  */
         display: flex;
         align-items: center;
         justify-content: flex-start;
@@ -144,7 +216,6 @@
     width: 100%;
     height: 100vh;
     background-color: whitesmoke;
-    z-index: 1900; /* Set a high z-index to ensure it overlays other content */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -155,7 +226,6 @@
     .close{
     width: 50px;
     height: 50px;
-    /* background-color: red; */
     position: absolute;
     top: 10px;
     right: 10px;
@@ -164,7 +234,6 @@
     .contents{
     width: 100%;
     height: 100%;
-    /* background-color: blue; */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -175,7 +244,6 @@
         width: 100%;
         height: 25%;
         color: #0455B4;
-        /* background-color: gray; */
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -202,7 +270,6 @@
     .centerNav1{
         width: 100%;
         height: 50%;
-        /* background-color: rgb(233, 241, 116); */
         display: block;
     }
     
@@ -228,4 +295,159 @@
     }
 }
 
- 
+/* @media screen and (max-width: 426px) {
+    header{
+        width: 100%;
+        height: 6vh;
+        background-color: #151617;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+    }
+
+    button {
+    }
+
+    span {
+        display: block;
+        width: 30px;
+        height: 40px;
+    }
+
+    .centerNav{
+        width: 70%;
+        height: 80%;
+    }
+
+    .Logo{
+        display: block;
+        width: 300%;
+        height: 70%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    
+    
+    .Logo img {
+        width: 100px;
+        height: 100px;
+    }
+
+    span .burger {
+        width: 100%;
+        height: 100%;
+    }
+
+    .headerwrap{
+        width: 90%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .ham{
+        width: 30%;
+        height: 100%;
+        display: block;
+        font-size: 30px;
+        background-color: gray;
+    }
+
+    .CTA{
+        width: 40%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+    }
+
+    .Logo, .centerNav{
+        display: none;
+    }
+
+    .sidebarDiv{
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: whitesmoke;
+    z-index: 1900; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    }
+
+    .close{
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    }
+
+    .contents{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;;
+    }
+
+    .useR{
+        width: 100%;
+        height: 25%;
+        color: #0455B4;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 20px;
+    }
+
+    .useR p{
+        font-size: 20px;
+        font-weight: 600;
+    }
+
+    .closeicon{
+        width: 50px;
+        height: 50px;
+        color: #0455B4;
+    }
+
+    .aUser{
+        width: 100px;
+        height: 100px;
+    }
+
+    .centerNav1{
+       display: block;
+    }
+    
+    .centerNav1 ul{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+    }
+    
+    .centerNav1 ul div {
+       display: none;
+    }
+
+    
+
+
+}
+
+  */
