--- a/src/Authentication/LoginPage/Log.css
+++ b/src/Authentication/LoginPage/Log.css
@@ -27,9 +27,9 @@
         /* background-color: pink; */
         color: #0455B4;
     }
-    .ETextCheckbox{
+    /* .ETextCheckbox{
         /* background-color: blue; */
-    }
+    /* }  */
     .SignInInputPassword{
         width: 100%;
         height: 15%;
@@ -163,6 +163,10 @@
     border-radius: 0;
     /* border-bottom: 1px solid #e91616; */
     /* background-color: red; */
+    }
+    .ETextCheckbox{
+        width: 100%;
+        height: 20%;background-color: pink;
     }
     .AdminwelcomeMssg{
     width: 100%;
