--- a/src/Authentication/SignOut/SignOut.css
+++ b/src/Authentication/SignOut/SignOut.css
@@ -37,7 +37,8 @@
     height: 50px;
     font-size: 18px;
     border-radius: 5px;
-    background-color: #0455B4;
+    /* background-color: #0455B4; */
+    /* background-color: red; */
 }
 .signupOption .signOptionCancel1:hover{
     background-color: white;
