--- a/src/Authentication/SignUpPage/SignUpMedia.css
+++ b/src/Authentication/SignUpPage/SignUpMedia.css
@@ -49,8 +49,8 @@
     .SignUpInputWrap{
         width: 100%;
         height: 13%;
-        position: relative;
         /* background-color: yellow; */
+        position: relative;
     }
     .SignUpInputWrap input{
         width: 100%;
@@ -58,12 +58,15 @@
         outline: none;
         /* background-color: aqua; */
     }
-    .Show{
+    .SignUpInputWrap .Show{
         font-size: 20px;
-        /* margin-top: 2px;
-        margin-bottom: 10%; */
         position: absolute;
-        top: 59%;
+        /* top: 40%; */
+        right: 10%;
+        bottom: 30%;
+        /* left: 0; */
+        /* top: 100%; */
+        background-color: green;
     }
     .SignUpInputWrap1 button{
         width: 100%;
@@ -71,26 +74,30 @@
         border-radius: 10px;
         background-color: #0455B4;
     }
-    .SignUpInputWrap2{
+    .SignUpInputWrap3{
         width: 100%;
         height: 20%;
-        /* background-color: yellow; */
-        /* margin-bottom: 20%; */
-        /* padding-bottom: 10%; */
+        background-color: yellow;
+        display: flex;
+        /* align-items: center; */
+        font-size: 20px;
+        /* justify-content: center; */
     }
-    .SignUpInputWrap2 input{
-        width: 100%;
-        height: 90%;
-        outline: none;
-        /* background-color: red; */
+    .SignUpInputWrap3 p{
+        /* width: 100%; */
+        /* margin-left: 0%; */
+        /* background-color: blueviolet; */
     }
-    .SignUpInputWrap2 p{
-        margin-left: 0%;
-    }
-    .SignUpInputWrap2 span{
+    .SignUpInputWrap3 span{
         color: #0455B4;
         cursor: pointer;
     }
+    .error-message {
+        color: red;
+        font-size: 10px;
+        margin-top: 5px;
+        z-index: -1;
+      }
 }
 
 @media screen and (max-width: 768px) {
@@ -157,6 +164,11 @@
     .SignUpInputWrap2 span{
         color: #0455B4;
     }
+    .error-message {
+        color: red;
+        font-size: 14px;
+        margin-top: 5px;
+      }
 }
 
 @media (min-width: 769px) and (max-width: 1284px){
@@ -201,4 +213,9 @@
     .SignUpInputWrap1{
         gap: 20px;
     }
+    .error-message {
+        color: red;
+        font-size: 5px;
+        margin-bottom: 10px;
+      }
 }
