--- a/src/Component/Header/Header.css
+++ b/src/Component/Header/Header.css
@@ -1,7 +1,6 @@
 header{
     width: 100%;
     height: 15vh;
-    /* background-color: #151617; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -10,35 +9,31 @@ header{
 .headerwrap{
     width: 90%;
     height: 100%;
-    /* background-color: aliceblue; */
     display: flex;
     align-items: center;
     justify-content: space-between;
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
-/* #0455B4 */
 .Logo{
     width: 15%;
     height: 100%;
-    /* background-color: paleturquoise; */
     display: flex;
     align-items: center;
-    /* justify-content: center; */
 }
 
-.Logo button {
+.Logo img {
     width: 80%;
-    height: 80%;
-    border: none;background-color: #0455B4;
+    height: 100%;
+    border: none;
     color: white;
     border-radius: 3px;
     cursor: pointer;
+    object-fit: cover;
 }
 
 .centerNav{
     width: 40%;
     height: 80%;
-    /* background-color: gray; */
 }
 
 .centerNav ul{
@@ -89,10 +84,114 @@ header{
     display: none;
 }
 
-/* .useR{
+/* * {
+    margin: 0%;
+    padding: 0%;
+    box-sizing: border-box;
+}
+
+header{
+    width: 100%;
+    height: 14vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+    background-color: rgba(255, 255, 255, 0.671);
+    color: black;
+}
+
+
+.headerwrap{
+    width: 90%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.Logo{
+    width: 15%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+
+
+.Logo img {
+    width: 100%;
+    height: 150%;
+    object-fit: cover;
+}
+
+.centerNav{
+    width: 611px;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #0A0A0A;
+font-family: Poppins;
+font-style: normal;
+font-weight: 600;
+line-height: normal;
+letter-spacing: 0.8px;
+}
+
+.centerNav ul{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: large;
+    color: black;
+}
+
+
+.centerNav ul li {
+    list-style-type: none;
+    cursor: pointer;
+}
+
+.usericons{
+    display: flex;
+    align-items: center;
+    gap: 3px;
+}
+
+.user{
+    font-size: 35px;
+    font-weight: 200;
+    color: black;
+}
+
+.CTA{
+    width: 15%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.CTA button {
+    width: 50%;
+    height: 40%;
+    border: none;
+    background-color:#0455B4 ;
+    color: white;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+.sidebarDiv{
     display: none;
 }
 
-.close{
+.ham{
+    display: none;
+}
+
+span {
     display: none;
 } */
