--- a/src/Component/LandingPage/LandingPage.css
+++ b/src/Component/LandingPage/LandingPage.css
@@ -3,6 +3,7 @@
     height: 80vh;
     background-color: white;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
