--- a/src/Component2/AdminDashboard/AdminDashRight/AdminAllWriter/AdminAllWriter.css
+++ b/src/Component2/AdminDashboard/AdminDashRight/AdminAllWriter/AdminAllWriter.css
@@ -32,6 +32,7 @@
     /* background-color: pink; */
     gap: 20px;
     cursor: pointer;
+    text-decoration: none;
 }
 .AdminAllWriterList{
     width: 100%;
@@ -69,6 +70,7 @@
     /* align-items: center; */
     /* justify-content: center; */
     text-align: left;
+    text-decoration: none;
 }
 
 @media screen and (max-width: 426px) {
