--- a/src/Authentication/LoginPage/Log.css
+++ b/src/Authentication/LoginPage/Log.css
@@ -43,9 +43,18 @@
     .SignInInputPassword .Show{
         font-size: 30px;
         position: absolute;
-        right: 20px;
-        top: 15px;
+        right: 15px;
+        top: 2px;
         /* background-color: red; */
+    }
+    .ETextCheckbox{
+        width: 100%;
+        height: 15%;
+        /* background-color: yellow; */
+    }
+    .ETextCheckbox input{
+        width: 5%;
+        height: 50%;
     }
 }
 
@@ -95,6 +104,15 @@
         top: 14px;
         /* background-color: red; */
     }
+    .ETextCheckbox{
+        width: 100%;
+        height: 20%;
+        /* background-color: yellow; */
+    }
+    .ETextCheckbox input{
+        width: 5%;
+        height: 50%;
+    }
 }
 
 @media screen and (max-width: 426px) {
@@ -113,6 +131,16 @@
     .SignWrap img{
         display: none;
     }
+    .signText{
+        width: 100%;
+        height: 20%;
+        /* background-color: pink; */
+        text-align: center;
+        margin-bottom: 30px;
+    }
+    .signText p span{
+        color: rgb(66, 93, 167);
+    }
     .input{
         width: 100%;
         height: 80%;
@@ -130,8 +158,6 @@
         align-items: center;
         flex-direction: column;
         justify-content: center;
-        /* background-color: #c9d953; */
-        position: relative;
     }
     .SignInInputPassword input{
         width: 100%;
@@ -139,12 +165,13 @@
         outline: none;
         padding-left: 5px;
         border-radius: 0;
+        position: relative;
     }
     .SignInInputPassword .Show{
-        font-size: 30px;
+        font-size: 23px;
         position: absolute;
-        right: 20px;
-        top: 10px;
+        right: 10px;
+        top: 0;
     }
     .EText{
         width: 100%;
@@ -166,7 +193,12 @@
     }
     .ETextCheckbox{
         width: 100%;
-        height: 20%;background-color: pink;
+        height: 20%;
+        /* background-color: yellow; */
+    }
+    .ETextCheckbox input{
+        width: 5%;
+        height: 50%;
     }
     .AdminwelcomeMssg{
     width: 100%;
