--- a/src/Authentication/LoginPage/Login.css
+++ b/src/Authentication/LoginPage/Login.css
@@ -1,6 +1,6 @@
 .AdminLoginPage{
     width: 100%;
-    height: 97vh;
+    height: 99.2vh;
     /* background-color: rgb(254, 9, 50) ; */
     display: flex;
     flex-direction: column;
@@ -42,7 +42,7 @@
     justify-content: center;
     margin-bottom: 20%;
     z-index: 500;
-    /* padding-top: 20%; */
+    padding: 10px;
 }
 
 .SignInWrap{
@@ -93,7 +93,7 @@
 }
 
 .SignInInputPassword input{
-    width: 100%;
+    width: 80%;
     height: 100%;
     outline: none;
     padding-left: 5px;
@@ -110,7 +110,7 @@
     color: #0455B4;
     cursor: pointer;
     position: absolute;
-    right: 10px;
+    right: 70px;
     top: 8px;
 }
 
@@ -125,7 +125,7 @@
 }
 
 .EText input{
-    width: 100%;
+    width: 80%;
     height: 100%;
     outline: none;
     padding-left: 5px;
@@ -138,7 +138,7 @@
 }
 
 .ETextCheckbox{
-    width: 100%;
+    width: 80%;
     height: 10%;
     /* background-color: gray; */
     display: flex;
@@ -169,7 +169,7 @@
 }
 
 .EText1 button{
-    width: 100%;
+    width: 80%;
     height: 50px;
     background-color: #0455B4;
     border: none;
