--- a/src/Authentication/SignUpPage/SignUpMedia.css
+++ b/src/Authentication/SignUpPage/SignUpMedia.css
@@ -48,15 +48,24 @@
     }
     .SignUpInputWrap{
         width: 100%;
-        height: 13%;
+        height: 15%;
         /* background-color: yellow; */
+        display: flex;
+        flex-direction: column;
     }
     .SignUpInputWrap input{
         width: 100%;
-        height: 70%;
+        height: 80%;
         outline: none;
         /* background-color: aqua; */
         position: relative;
+    }
+    .SignUpInputWrap p{
+        width: 100%;
+        height: 20%;
+        /* background-color: rgb(13, 237, 13); */
+        display: flex;
+        justify-content: baseline;
     }
     .SignUpInputWrap .Show{
         font-size: 18px;
